# truemoji

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  table.rs
truemoji-core/: Cargo.toml  README.md
truemoji-core/src/: ast.rs  lex.rs  lib.rs  parse.rs
