[package]
name = "truemoji"
version = "0.1.0"
edition = "2021"
authors = ["Robert Yin <bobertoyin@gmail.com"]
description = "Command line tool for the Truemoji language."
repository = "https://github.com/bobertoyin/truemoji"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
itertools = "0.10.5"
prettytable-rs = "0.10.0"
rayon = "1.6.1"
truemoji-core = "0.1.0"
yansi = "0.5.1"

