[package]
name = "truemoji-core"
version = "0.1.0"
edition = "2021"
authors = ["Robert Yin <bobertoyin@gmail.com"]
about = "Core library for the Truemoji language specification."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
thiserror = "1.0.38"

[dev-dependencies]
rstest = "0.16.0"
